@@ -1,6 +1,6 @@
 <!--
   ~ HeadsUp Agile
-  ~ Copyright 2009-2012 Heads Up Development Ltd.
+  ~ Copyright 2009-2013 Heads Up Development Ltd.
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU Affero General Public License as
@@ -28,7 +28,7 @@
           <tr>
             <th class="issue">Issue</th>
             <td>
-              <input wicket:id="relatedIssueId" /> in project <select wicket:id="relatedProject" />
+              <input wicket:id="relatedIssueText" style="width: 400px" /> in project <select wicket:id="relatedProject" />
             </td>
           </tr>
           <tr>
